--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "level-session-store": "^2.2.0",
     "level-ws": "^2.0.0",
     "leveldown": "^5.4.1",
-    "levelup": "^4.3.2"
+    "levelup": "^4.3.2",
+    "password-hash": "^1.2.2"
   },
   "devDependencies": {
     "@types/express": "^4.17.2",
